added profile info

--- a/content/projects/oddnoteven-store.mdx
+++ b/content/projects/oddnoteven-store.mdx
@@ -7,7 +7,7 @@ type: "web"
 stack: ["Shopify", "Liquid", "JavaScript", "HTML", "CSS"]
 category: "Freelance"
 slug: "oddnoteven-store"
-image: "https://picsum.photos/200/300"
+image: "https://res.cloudinary.com/dmuhioahv/image/upload/v1742985570/screenshots/Login_nlcrcl.png"
 link: "https://oddnoteven.com"
 ---
 
