--- a/content/projects/ultimate-health.mdx
+++ b/content/projects/ultimate-health.mdx
@@ -7,7 +7,7 @@ type: "mobile"
 stack: ["react native", "express.js", "mongodb", "nodejs"]
 category: "Open-Source"
 slug: "ultimate-health"
-image: "https://picsum.photos/200/300"
+image: "https://res.cloudinary.com/dmuhioahv/image/upload/v1742985570/screenshots/Login_nlcrcl.png"
 link: "https://github.com/SB2318/UltimateHealth"
 github: "https://github.com/SB2318/UltimateHealth"
 ---
