added info data

--- a/content/projects/oddnoteven-store.mdx
+++ b/content/projects/oddnoteven-store.mdx
@@ -1,7 +1,7 @@
 ---
 title: "OddNotEven Store"
 description: "OddNotEven Store is a Shopify-based e-commerce platform developed for a client under the agency References. While built on Shopify's existing framework, the project includes custom sections to enhance functionality and user experience. the project includes custom sections to enhance functionality and user experience."
-date: "2024-03-15"
+date: "March 15, 2024"
 updated: null
 type: "web"
 stack: ["Shopify", "Liquid", "JavaScript", "HTML", "CSS"]
