--- a/content/projects/ultimate-health.mdx
+++ b/content/projects/ultimate-health.mdx
@@ -1,7 +1,7 @@
 ---
 title: "UltimateHealth"
 description: "UltimateHealth is an innovative open-source project that serves as an online library and article management application focused on health. UltimateHealth is ONE repository for trustable resources and reliable health insights."
-date: "2023-08-03"
+date: "August 3, 2023"
 updated: null
 type: "mobile"
 stack: ["react native", "express.js", "mongodb", "nodejs"]
