added new content

--- a/content/projects/oddnoteven-store.mdx
+++ b/content/projects/oddnoteven-store.mdx
@@ -7,7 +7,7 @@ type: "web"
 stack: ["Shopify", "Liquid", "JavaScript", "HTML", "CSS"]
 category: "Freelance"
 slug: "oddnoteven-store"
-image: "https://res.cloudinary.com/dmuhioahv/image/upload/v1742985570/screenshots/Login_nlcrcl.png"
+image: "https://res.cloudinary.com/dmuhioahv/image/upload/v1744288410/og_1_nkbsl6.png"
 link: "https://oddnoteven.com"
 ---
 
@@ -24,19 +24,21 @@ OddNotEven Store is a Shopify-based e-commerce platform developed for a client u
 
 ### Homepage
 
-![Homepage](https://res.cloudinary.com/dmuhioahv/image/upload/v1742985570/screenshots/Homepage.png)
+![Homepage](https://res.cloudinary.com/dmuhioahv/image/upload/v1744289213/og_2_hf9ikl.png)
+
+### Collection Page
+
+![Collection](https://res.cloudinary.com/dmuhioahv/image/upload/v1744289214/og_4_dymo0i.png)
 
 ### Product Page
 
-![Product](https://res.cloudinary.com/dmuhioahv/image/upload/v1742985568/screenshots/Product.png)
+![Product](https://res.cloudinary.com/dmuhioahv/image/upload/v1744289214/og_3_grslzu.png)
 
 ### Cart Page
 
-![Cart](https://res.cloudinary.com/dmuhioahv/image/upload/v1742985569/screenshots/Cart.png)
+![Cart](https://res.cloudinary.com/dmuhioahv/image/upload/v1744289214/og_5_s4lcmo.png)
 
-### Checkout Page
 
-![Checkout](https://res.cloudinary.com/dmuhioahv/image/upload/v1742985569/screenshots/Checkout.png)
 
 
 ## Tech Stack
